--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": ".",
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "moduleResolution": "Node",
