--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^29.5.13",
     "@types/mysql": "^2.15.26",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "axios": "^1.7.7",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
